update the experiance

--- a/index.html
+++ b/index.html
@@ -169,19 +169,23 @@
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1"> Creative Designer – Graphics, Video & Web UX</h5>
+                            <p class="mb-2"><strong>CVC International </strong> | <small> Nov 2024 - Present</small></p>
+                            <p> Designed graphics, videos, and digital assets for marketing campaigns, ensuring
+                                brand consistency. Created responsive UI/UX designs using Figma and Canva.
+                                Collaborated with teams on wireframing, prototyping, and applying basic
+                                HTML/CSS to enhance usability and deliver engaging, user-focused experiences.</p>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Web Designer Intern  </h5>
                             <p class="mb-2"><strong>Nonstop Corp.</strong> | <small>january 2023 - April 2023</small></p>
                             <p>Collaborate with the design team to create engaging and responsive website designs and 
                                 Utilize HTML, CSS, and other web development tools to implement and maintain website
                                 layouts and features.</p>
                         </div>
+
                         <!-- <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Web Designer</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small>2000 - 2050</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
-                        </div>
-                        <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Web Designer</h5>
                             <p class="mb-2"><strong>Soft Company</strong> | <small>2000 - 2050</small></p>
