--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Aastha Shahu</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer,Figma Designer, Wordpress Developer</div>
+                    <div class="typed-text d-none"> Data Analyst, Web Designer, Web Developer, Front End Developer,Figma Designer, Wordpress Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="./resume.pdf" class="btn btn-outline-light mr-5">Download CV</a>
+                        <a href="./AasthaResume2025.pdf" class="btn btn-outline-light mr-5">Download CV</a>
                         <!-- <button type="button" class="btn-play" data-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
                             <span></span>
@@ -179,7 +179,7 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Web Designer Intern  </h5>
-                            <p class="mb-2"><strong>Nonstop Corp.</strong> | <small>january 2023 - April 2023</small></p>
+                            <p class="mb-2"><strong>Nonstop Corp.</strong> | <small>january 2023 - january 2024</small></p>
                             <p>Collaborate with the design team to create engaging and responsive website designs and 
                                 Utilize HTML, CSS, and other web development tools to implement and maintain website
                                 layouts and features.</p>
@@ -471,20 +471,65 @@
             </div>
             <div class="row">
                 <!-- Project Item 1 -->
+
                 <div class="mb-2">
-                    <p>1] Redesigned the H&M website Template using Figma to improve user experience and brand consistency.
+                    <p>1] Movie Recommendation System Using Machine Learning
+                        <br>Here's the full project design:
+                        <a href="https://movie-recommendations-systems.streamlit.app/" target="_blank">movie-recommendations-systems Website Design</a>
+                    </p>
+                </div>
+
+                <div class="mb-2">
+                    <p>2] European Football League Analysis Dashboard
+                        <br>Here's the full project design:
+                        <a href="" target="_blank">European Football League Analysis Dashboard</a>
+                    </p>
+                </div>
+
+                <div class="mb-2">
+                    <p>3] Redesigned the H&M website Template using Figma to improve user experience and brand consistency.
                         <br>Here's the full project design:
                         <a href="https://www.figma.com/file/vGoAxm0nLeaOIB6sbBQTHv/Fasion-Website?node-id=0%3A1&t=0AipWWyizP60xLc9-1" target="_blank">Redesign Template For Fashion Website</a>
                     </p>
                 </div>
 
                 <div class="mb-2">
-                    <p>2] Cake website design using Figma to showcase design skills and user-friendly website
+                    <p>4] Cake website design using Figma to showcase design skills and user-friendly website
                         <br>Here's the full project design:
                         <a href="https://www.figma.com/proto/8ZQdJMANybZloupHhcdADx/Cake-websitedesign?node-id=1-2&scaling=min-zoom&page-id=0%3A1
                         " target="_blank">Cake Website Design</a>
                     </p>
                 </div>
+
+                <div class="mb-2">
+                    <p>5] Neetu Roadways | Wordpress Project
+                        <br>Here's the full project design:
+                        <a href="https://neeturoadways.com/" target="_blank">Neetu Roadways Project</a>
+                    </p>
+                </div>
+
+                <div class="mb-2">
+                    <p>6] Om Transport | Wordpress Project
+                        <br>Here's the full project design:
+                        <a href="https://omtransport.co/" target="_blank">Om Transport Project</a>
+                    </p>
+                </div>
+
+                <div class="mb-2">
+                    <p>7] Jai Lakshmi Movers and Packers | Wordpress Project
+                        <br>Here's the full project design:
+                        <a href="" target="_blank"> Jai Lakshmi Movers and Packers Project</a>
+                    </p>
+                </div>
+
+                <div class="mb-2">
+                    <p>8] Online Music Player
+                        <br>Here's the full project design:
+                        <a href="https://github.com/ashsus09/Online-Music-Player-using-HTML-Javascript/ " target="_blank"> Online Music Player Project</a>
+                    </p>
+                </div>
+
+               
                 <!-- Project Item 2 -->
                 <!-- Add more project items as needed -->
             </div>
