--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
     <!-- new one  -->
 
     <!-- Portfolio Start -->
-    <div class="container-fluid pt-5 pb-3" id="portfolio">
+    <div class="container-fluid pt-8 pb-5" id="portfolio">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Gallery</h1>
@@ -482,7 +482,7 @@
                 <div class="mb-2">
                     <p>2] European Football League Analysis Dashboard
                         <br>Here's the full project design:
-                        <a href="" target="_blank">European Football League Analysis Dashboard</a>
+                        <a href="" target="_blank">European Football League Analysis Dashboard</a>s
                     </p>
                 </div>
 
