--- a/index.html
+++ b/index.html
@@ -463,79 +463,91 @@
     <!-- new one  -->
 
     <!-- Portfolio Start -->
-    <div class="container-fluid pt-8 pb-5" id="portfolio">
-        <div class="container">
-            <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Gallery</h1>
-                <h1 class="position-absolute text-uppercase text-primary">My Portfolio</h1>
+    <!-- Portfolio Start -->
+<div class="container-fluid pt-5 pb-5" id="portfolio">
+    <div class="container">
+        <div class="position-relative d-flex align-items-center justify-content-center mb-5">
+            <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Gallery</h1>
+            <h1 class="position-absolute text-uppercase text-primary">My Portfolio</h1>
+        </div>
+
+        <div class="row">
+            <div class="col-12 mb-4">
+                <div class="p-4 border rounded shadow-sm bg-light">
+                    <p><strong>1] Movie Recommendation System Using Machine Learning</strong><br>
+                        Here's the full project design: 
+                        <a href="https://movie-recommendations-systems.streamlit.app/" target="_blank">Movie Recommendations Website</a>
+                    </p>
+                </div>
             </div>
-            <div class="row">
-                <!-- Project Item 1 -->
 
-                <div class="mb-2">
-                    <p>1] Movie Recommendation System Using Machine Learning
-                        <br>Here's the full project design:
-                        <a href="https://movie-recommendations-systems.streamlit.app/" target="_blank">movie-recommendations-systems Website Design</a>
+            <div class="col-12 mb-4">
+                <div class="p-4 border rounded shadow-sm bg-light">
+                    <p><strong>2] European Football League Analysis Dashboard</strong><br>
+                        Here's the full project design: 
+                        <a href="#" target="_blank">European Football League Analysis Dashboard</a>
                     </p>
                 </div>
+            </div>
 
-                <div class="mb-2">
-                    <p>2] European Football League Analysis Dashboard
-                        <br>Here's the full project design:
-                        <a href="" target="_blank">European Football League Analysis Dashboard</a>s
+            <div class="col-12 mb-4">
+                <div class="p-4 border rounded shadow-sm bg-light">
+                    <p><strong>3] Redesigned H&M Website Template using Figma</strong><br>
+                        Here's the full project design: 
+                        <a href="https://www.figma.com/file/vGoAxm0nLeaOIB6sbBQTHv/Fasion-Website?node-id=0%3A1&t=0AipWWyizP60xLc9-1" target="_blank">Fashion Website Template</a>
                     </p>
                 </div>
+            </div>
 
-                <div class="mb-2">
-                    <p>3] Redesigned the H&M website Template using Figma to improve user experience and brand consistency.
-                        <br>Here's the full project design:
-                        <a href="https://www.figma.com/file/vGoAxm0nLeaOIB6sbBQTHv/Fasion-Website?node-id=0%3A1&t=0AipWWyizP60xLc9-1" target="_blank">Redesign Template For Fashion Website</a>
+            <div class="col-12 mb-4">
+                <div class="p-4 border rounded shadow-sm bg-light">
+                    <p><strong>4] Cake Website Design using Figma</strong><br>
+                        Here's the full project design: 
+                        <a href="https://www.figma.com/proto/8ZQdJMANybZloupHhcdADx/Cake-websitedesign?node-id=1-2&scaling=min-zoom&page-id=0%3A1" target="_blank">Cake Website Design</a>
                     </p>
                 </div>
+            </div>
 
-                <div class="mb-2">
-                    <p>4] Cake website design using Figma to showcase design skills and user-friendly website
-                        <br>Here's the full project design:
-                        <a href="https://www.figma.com/proto/8ZQdJMANybZloupHhcdADx/Cake-websitedesign?node-id=1-2&scaling=min-zoom&page-id=0%3A1
-                        " target="_blank">Cake Website Design</a>
-                    </p>
-                </div>
-
-                <div class="mb-2">
-                    <p>5] Neetu Roadways | Wordpress Project
-                        <br>Here's the full project design:
+            <div class="col-12 mb-4">
+                <div class="p-4 border rounded shadow-sm bg-light">
+                    <p><strong>5] Neetu Roadways | WordPress Project</strong><br>
+                        Here's the full project design: 
                         <a href="https://neeturoadways.com/" target="_blank">Neetu Roadways Project</a>
                     </p>
                 </div>
+            </div>
 
-                <div class="mb-2">
-                    <p>6] Om Transport | Wordpress Project
-                        <br>Here's the full project design:
+            <div class="col-12 mb-4">
+                <div class="p-4 border rounded shadow-sm bg-light">
+                    <p><strong>6] Om Transport | WordPress Project</strong><br>
+                        Here's the full project design: 
                         <a href="https://omtransport.co/" target="_blank">Om Transport Project</a>
                     </p>
                 </div>
+            </div>
 
-                <div class="mb-2">
-                    <p>7] Jai Lakshmi Movers and Packers | Wordpress Project
-                        <br>Here's the full project design:
-                        <a href="" target="_blank"> Jai Lakshmi Movers and Packers Project</a>
+            <div class="col-12 mb-4">
+                <div class="p-4 border rounded shadow-sm bg-light">
+                    <p><strong>7] Jai Lakshmi Movers and Packers | WordPress Project</strong><br>
+                        Here's the full project design: 
+                        <a href="#" target="_blank">Jai Lakshmi Movers and Packers Project</a>
                     </p>
                 </div>
+            </div>
 
-                <div class="mb-2">
-                    <p>8] Online Music Player
-                        <br>Here's the full project design:
-                        <a href="https://github.com/ashsus09/Online-Music-Player-using-HTML-Javascript/ " target="_blank"> Online Music Player Project</a>
+            <div class="col-12 mb-4">
+                <div class="p-4 border rounded shadow-sm bg-light">
+                    <p><strong>8] Online Music Player</strong><br>
+                        Here's the full project design: 
+                        <a href="https://github.com/ashsus09/Online-Music-Player-using-HTML-Javascript/" target="_blank">Online Music Player Project</a>
                     </p>
                 </div>
-
-               
-                <!-- Project Item 2 -->
-                <!-- Add more project items as needed -->
             </div>
         </div>
     </div>
 </div>
+<!-- Portfolio End -->
+
 <!-- Portfolio End -->
 
 
